--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</div>
 		<div class="con-contents">
 			<div class="con-links">
-				<a target="_blank" href="https://www.instagram.com/luisdanielroviracontreras/">
+				<a target="_blank" href="https://www.instagram.com/abhay_khillare/">
 					<i class='bx bxl-instagram-alt'></i>
 					<span>
 						Instagram
